# openzoo-server

./: .env  .gitignore  Dockerfile  deployment.yaml  model_mapping.json  pyproject.toml
.github/workflows/: aws.yml
auth/: APIKeyManager.py  api_keys.json
inference/: infer.py  models.py  moderate.py  prompt_templates.py
k8s/: deployment-local.yaml  deployment.yaml  service.yaml
openzoo_server/: server.py
providers/together/: config.py
router/: models.py  router.py
routers/: admin.py  chat.py  completions.py  embeddings.py
templates/: table.html
validation/: chat.py  completion.py  embeddings.py  moderation.py
